# simple-config

./: .gitignore  simple-config.cabal
Text/: Config.hs
Text/Config/: Lib.hs  Parser.hs  TH.hs  Types.hs
